<resources>
    <string name="app_name">BuildHer</string>
    <string name="build">Build</string>
    <string name="her">Her</string>

    <!-- Tab names -->
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="updates">Updates</string>
    <string name="sponsors">Sponsors</string>

    <!-- Parse constants -->
    <string name="parse_server_url">http://buildher.herokuapp.com/parse/</string>
    <string name="parse_app_id">BuildHerApp</string>
    <string name="gcm_sender_id">id:703336351827</string>
    <string name="loading_failed">Unable to connect to server :(</string>
</resources>
