<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/ic_event_white_24dp"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/map"/>
    <item
        android:id="@+id/announcements"
        android:icon="@drawable/ic_announcement_white_24dp"
        android:title="@string/updates"/>
    <item
        android:id="@+id/sponsors"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/sponsors"/>
</menu>